[tool.poetry]
name = "tiktok_bot"
version = "0.1.0"
description = "Tik Tok API"
authors = ["Evgeny Kemerov <eskemerov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
httpx = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.1.2"
pytest-cov = "^2.7.1"
pytest-mock = "^1.10.4"
pre-commit = "^1.18.3"
pytest-sugar = "^0.9.2"
black = {version = "^19.3b0", allows-prereleases = true}

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

