[tool.poetry]
name = "tiktok_bot"
version = "0.4.4"
description = "Tik Tok API"
authors = ["Evgeny Kemerov <eskemerov@gmail.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["tiktok", "bot", "api", "wrapper", "tiktokbot"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
httpx = "^0.7.4"
pydantic = "^0.32.2"
loguru = "^0.3.2"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.1.2"
pytest-cov = "^2.7.1"
pytest-mock = "^1.10.4"
pre-commit = "^1.18.3"
pytest-sugar = "^0.9.2"
black = {version = "^19.3b0", allows-prereleases = true}
ipython = "^7.8.0"
flake8 = "^3.7.8"
flake8-blind-except = "^0.1.1"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^2.2.0"
flake8-deprecated = "^1.3"
flake8-mutable = "^1.2.0"
flake8-tidy-imports = "^2.0.0"
flake8-print = "^3.1.0"
isort = "^4.3.21"
mypy = "^0.740"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
